--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/v4oN4DuR7YU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Ggh_y-33Eso" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+ <link rel="stylesheet" href="index.css">
  
 <body>
   
