--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Advanced HTML</title>
 </head>
-   <center> <h1> Basic HTML Page</h1></center> 
- <center>  <p> Here are some videos some how to do HMTL and CSS </p></center>
- 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/v4oN4DuR7YU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Ggh_y-33Eso" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- <link rel="stylesheet" href="index.css">
- 
-<body>
+  <center> <h1> Advanced HTML  </h1> </center>  
+  <div class="a">
+  <p> In order to apply CSS to your web page: </p>  
+  <li> Link the css on the HTML Doctype</li> 
+  <li> Referance the location of  the CSS</li> 
+  <li> Make sure theres a closing tag and semicolon on the ends</li> 
+  </div>
   
+  
+  <body>
 
 </body>
 </html>
